# genimg

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  DEVELOPMENT.md  EXAMPLES.md  MANIFEST.in  Makefile  README.md  README_SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: ai_process_01_create_specification.mdc  ai_process_02_create_plan.mdc  ai_process_03_execute_plan.mdc  ai_process_04_create_release.mdc  code-review-process.mdc  venv.mdc
docs/: CHANGELOG.md  CLI_PLAN.md  CODE_REVIEW.md  DECISIONS.md  DEVELOPMENT.md  EXAMPLES.md  GRADIO_UI_PLAN.md  GRADIO_UI_SANITY_CHECK.md  LIBRARY_SPEC.md  MCP_SERVER_SPEC.md  MCP_TASKS.md  PROJECT_INIT.md  SPEC.md  browser-notifications.md
docs/samples/images/: README.md
docs/samples/prompts/: basic.txt  detailed.txt  optimized_examples.json  with_reference.txt
docs/samples/responses/: ollama_output.txt  openrouter_errors.json  openrouter_success.json
scripts/: benchmark.py  generate_sample.py  inspect_cache.py  test_api.py  test_ollama.py
src/genimg/: __init__.py  __main__.py  logging_config.py  models.yaml  prompts.yaml  ui_models.yaml
src/genimg/assets/logo/: README.md
src/genimg/cli/: __init__.py  character_prompt.py  commands.py  draw_things_cmds.py  handlers.py  progress.py  utils.py
src/genimg/contrib/: __init__.py
src/genimg/contrib/draw_things_poc/: __init__.py  catalog.py  cli.py  client.py  config_builder.py  constants.py  presets.py  provider.py  samplers.py  tensor_image.py
src/genimg/core/: __init__.py  config.py  image_gen.py  models.py  prompt.py  prompts_loader.py  provider_ids.py  reference.py
src/genimg/core/image_analysis/: __init__.py  api.py  image_utils.py
src/genimg/core/image_analysis/backends/: __init__.py  _joytag_models.py  base.py  florence.py  joytag.py
src/genimg/core/providers/: __init__.py  base.py  ollama.py  openrouter.py  registry.py
src/genimg/core/providers/draw_things/: __init__.py  catalog.py  client.py  config_builder.py  constants.py  lora_choices.py  presets.py  provider.py  samplers.py  tensor_image.py  types.py
src/genimg/ui/: __init__.py  gradio_app.py
src/genimg/utils/: __init__.py  cache.py  exceptions.py
tests/: __init__.py  conftest.py  test_draw_things_poc.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_florence_describe.py  test_ollama_image_gen.py  test_openrouter_image_gen.py
tests/unit/: __init__.py  test_cache.py  test_cli.py  test_cli_character_progress.py  test_cli_character_utils.py  test_cli_draw_things_lora.py  test_config.py  test_draw_things_core_presets.py  test_draw_things_lora_choices.py  test_exceptions.py  test_gradio_app.py  test_image_analysis.py  test_image_gen.py  test_logging_config.py  test_models.py  test_openrouter_payload.py  test_prompt.py  test_prompts_loader.py  test_provider_ids.py  test_providers_draw_things.py  test_providers_ollama.py  test_providers_registry.py  test_reference.py  test_version.py
tools/draw_things_codegen/: README.md  regen.sh
